--- a/local.env
+++ b/local.env
@@ -1,9 +1,9 @@
-MONGODB_DATABASE=mongo
+MONGODB_DATABASE=lift
 MONGODB_HOST=127.0.0.1
 MONGODB_PORT=27017
 MONGODB_USERNAME=root
-MONGODB_PASSWORD=password
+MONGODB_PASSWORD=example
 MONGODB_AUTH_DATABASE=admin
-CRON_EXPRESSION=0 * * * *
-LOCAL_PATH=/var/mongo/backups
+CRON_EXPRESSION=0 0 * * *
+LOCAL_PATH=/home/andy/Desktop/mongo/backups
 DESTINATION_PATH=/var/mongo/backups
