--- a/local.env
+++ b/local.env
@@ -4,6 +4,7 @@ MONGODB_PORT=27017
 MONGODB_USERNAME=root
 MONGODB_PASSWORD=example
 MONGODB_AUTH_DATABASE=admin
-CRON_EXPRESSION=0 0 * * *
+CRON_EXPRESSION=30 1 1,15 * *
+INCREMENTAL_CRON_EXPRESSION=0-59 * * * *
 LOCAL_PATH=/home/andy/Desktop/mongo/backups
 DESTINATION_PATH=/var/mongo/backups
