--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - MONGODB_PASSWORD=${MONGODB_PASSWORD}
       - MONGODB_AUTH_DATABASE=${MONGODB_AUTH_DATABASE}
       - CRON_EXPRESSION=${CRON_EXPRESSION}
+      - INCREMENTAL_CRON_EXPRESSION=${INCREMENTAL_CRON_EXPRESSION}
       - LOCAL_PATH=${LOCAL_PATH}
       - DESTINATION_PATH=${DESTINATION_PATH}
     image: tapas_backup
